--- a/src/app/videoplayer/videoplayer.component.css
+++ b/src/app/videoplayer/videoplayer.component.css
@@ -3,4 +3,5 @@
     min-height: 360px !important;
     max-height: 360px !important;
     background-color:green;
+    max-width: 80%;
 }
